# ArsPostFaber

./: .gitignore  2_segmenter.py  3dslicer_docs.md  BitmapParameter.cs  ComponentButton.cs  DrawingExtension.cs  EventArguments.cs  GCodeComponent.cs  GCodeGeneratorComponent.cs  HandDetectorComponent.cs  HandtrackComponent.cs  ImageDisplayComponent.cs  MeshComponent.cs  MeshContoursComponent.cs  MeshEditorComponent.cs  MeshEditorComponent.cs.bak  MeshHandTrackingComponent.cs  PortParam.cs  README.md  README_TROUBLESHOOTING.md  SAMComponent.cs  SegmentationComponent.cs  SerialPortWrapper.cs  TestPrinterConnection.cs  VideoSAM2Component.cs  VideoSAMComponent.cs  WebcamComponent.cs  WebcamFallback.cs  WebcamViewerComponent.cs  agent-llm-doc.md  colmap.md  crft.csproj  crft.sln  crftComponent.cs  crftInfo.cs  csharp-slicer-implementation.md  download_models.sh  edit.py  finetuning-guide.md  finetuning-openai.md  (+31 more)
GeneratedComponents/: CurveSelect.cs  LineParam.cs  UnknownComponent.cs
Icons/: ascii_art.py  pixelate.py
PythonNETGrasshopperTemplate/: .gitignore  COPYING.txt  NOTICE.txt  PythonNETGrasshopperTemplate.sln  README.md
Segment-Anything/: MacProgram.cs  Program.cs  README_MAC.md  SAM.cs  SAMViewer.Mac.csproj  VideoSAM.cs  WebInterface.cs
backup/: launch_sam_ui.py  run_fixed_sam.sh  run_sam_direct.py  segment_video.sh  test_browser.sh  test_sam2_fixed.sh  test_sampler.py  view_video.py
docs/: Slicer.md
examples/: GHComponent.gh  ModelABC.3dm  cube_gc.gcode  (+13 more)
native/Crft.CGALWrapper/: CMakeLists.txt  export.h
native/Crft.CGALWrapper/src/: Crft.CGALWrapper.cpp
(+101 files in other folders)
